# 1617.softconcurr

./: .gitignore  2007.demo.csv  README.md  cloudera@161.116.56.40  common.h  compile_cpu.sh  compile_gpu.sh  exec_streaming.sh  kernel.cl  kernel_blocks.cl  kernel_blocks_locimg.cl  kernel_blocks_locimg_bak.cl  kernel_blocks_locpat.cl  kernel_core.c  kernel_one_wi_per_pixel.cl  kernel_pixel.cl  kernel_pixel_old.cl  kernel_rows.cl  main.cpp  mapper.py  out.txt  pattmatch_cpu.cpp  pattmatch_gpu.cpp  reducer.py  samples
Practica1/: Makefile  analisis.txt  create-tree.c  opt_10.txt  opt_2.txt  opt_ord.txt  opt_tot.txt  red-black-tree.h
omp-1 codi/: main  parconsdefault.cpp  parconsprivate.cpp  taskconsexample.cpp
omp-1 codi/forconscimg/: README.txt  compile.sh  forconscimg.cpp
omp-1 codi/forconsopencv/: CMakeLists.txt  forconsopencv.cpp
