project( opencv )
find_package( OpenCV REQUIRED )
FIND_PACKAGE(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_executable( forcons forconsopencv.cpp )
target_link_libraries( forcons ${OpenCV_LIBS} )

